tests/baselines/reference/classHeritageWithTrailingSeparator.errors.txt
classHeritageWithTrailingSeparator.ts(1,11): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
classHeritageWithTrailingSeparator.ts(2,18): error TS1009: Trailing comma not allowed.


==== classHeritageWithTrailingSeparator.ts (2 errors) ====
    class C { foo: number }
              ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class D extends C, {
                     ~
!!! error TS1009: Trailing comma not allowed.
    }